# TCFile

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: deploy.yml
TCFile/: TCFile_class.py  __init__.py  zarr_store.py
TCFile-tests/: TCFhandler.py  test_snapshot.TCF
TCFile/TCFhandler/: TCFile.py
TCFile/tests/: TCFhandler.py  test_snapshot.TCF
Tomocell/: TCFhandler.py  TCFile.py  __init__.py  cellpolarity.py  cellprofiling.py  visualization.py
Tomocell/TCFhandler/: TCFcell.py  TCFile.py  __init__.py
Tomocell/analysis/: __init__.py  basic.py  cell_dynamics_analysis.py  cell_static_state_analysis.py  img_mask.py  morphology.py
Tomocell/plot/: __init__.py  matplot_slice.py  sliceView.py
Tomocell/tests/: TCFhandler.py
docs/: structure_TCF.md
tests/: __init__.py  test_TCFile_class.py  test_zarr_store.py
