[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Tomocell"
version = "0.0.1"
description = "Python package for handling TCF data. It works with Tomcube data"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Dohyeon Lee", email = "dleh428@kaist.ac.kr"}]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing"
]

dependencies = [
    "numpy>=1.18.5",
    "scipy>=1.7.0",
    "scikit-image>0.18.2",
    "h5py>=3.2.0",
    "multimethod>=1.4",
    "matplotlib>=3.4.0",
    "opencv-python>=4.5.0",
    "pytest>=6.2"
]

[tool.setuptools.packages.find]
where = ["Tomocell"]
exclude = ["tests"]
