[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TCFile"
version = "1!0.1.0"
description = "Python package for handling TCF data. It works with Tomcube data"
readme = "README.md"
requires-python = ">=3.7,<4"
license = {file = "LICENSE"}
authors = [{name = "Dohyeon Lee", email = "dleh428@kaist.ac.kr"}]
maintainers = [{name = "Dohyeon Lee", email = "dleh428@kaist.ac.kr"}]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "numpy>=1.18.5,<2",
    "h5py>=3.2.0,<4",
    "pillow>=9.5.0,<10"
]

[project.urls]
repository = "https://github.com/ehgus/TCFile"

[tool.flit.sdist]
include = ["TCFile/"]